--- a/_sass/mixins.scss
+++ b/_sass/mixins.scss
@@ -75,7 +75,7 @@
 		display: block;
 		font-size: var(--fs-small);
 		font-weight: bold;
-		letter-spacing: 0.033em;
+		letter-spacing: var(--ls-medium);
 		line-height: 1;
 		overflow: hidden;
 		padding: var(--space-default) var(--space-medium);
